--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="row align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-lg-6">
                         <div class="header_hero_content mt-45">
-                            <h5 class="header_sub_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Hello, I'm Promod Gaur!</h5>
+                            <h5 class="header_sub_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Hello, I'm Promod Kumar Gaur!</h5>
                             <h2 class="header_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">I am a website developer</h2>
                             <span class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">I am always eager to learn new technologies and enhance my skills to create better web solutions. Feel free to explore my work and connect with me for any web development projects!</span>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">I specialize in designing and developing responsive, user-friendly websites that deliver a great experience</p>
