--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <li><a href="#"><i class="lni lni-facebook-filled"></i></a></li>
                 <li><a href="#"><i class="lni lni-twitter-filled"></i></a></li>
                 <li><a href="#"><i class="lni lni-instagram-filled"></i></a></li>
-                <li><a href="www.linkedin.com/in/pramod-kumar-gaur-6bb847145"><i class="lni lni-linkedin-original-filled"></i></a></li>
+                <li><a href="www.linkedin.com/in/pramod-kumar-gaur-6bb847145"><i class="lni lni-linkedin-original"></i></a></li>
             </ul>
             <div class="container">
                 <div class="row align-items-center justify-content-center justify-content-lg-between">
